2015-06-16  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-2-47

	* controlfiles/artscomponents/absorption/IsoRatios_H2O[orig,mani].xml:
	Updated N2 iso ratios to state of built-in data (which had changed by
	2014-04-07). Fixes broken TestIsoRatio.arts case.

	* controlfiles/artscomponents/arts-xml-data/TestPlanetIsoRatios.arts,
	TestPlanetIsoRatios.[Venus,Mars,Jupiter].y_reference.xml:
	Apply Compare. Reference data for PlanetIso case added.

	* doc/uguide/absorption_theory.tex, absorption.tex: Spell/Grammar fixes.

2015-05-06  Mathias Milz  <mathias.milz@ltu.se>

	* arts-2-2-46

	* src/m_sensor.cc: (f_gridFromSensorHIRS)
	  replaced line 747:
	       Vector grid(fmin[i], npi, gs);
	  by:  
	       Vector grid;
	       linspace(grid,fmin[i],fmax[i],gs);
	  
	  as numerical uncertainties in gs created 
	  errors in f_grid 

	* src/m_sensor.cc: (f_gridFromSensorAMSU)
	  replaced line 506:
	       Vector grid(fmin[i], npi, gs);
	  by:  
	       Vector grid;
	       linspace(grid,fmin[i],fmax[i],gs);
	  
	  as numerical uncertainties in gs created 
	  errors in f_grid 

2015-03-13  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-2-45

	* src/methods.cc (ybatchCalc): Fix built-in doc of robust: doesn't set
	-1 values anymore, but empty vectors.

2015-02-27  Jana Mendrok  <jana.mendrok@ltu.se>

	* Arts-2-2-44

	* src/m_doit.cc (doit_i_fieldSetFromdoit_i_field1D_spectrum):
	Set upwelling at lower boundary from precalc field if lower boundary is
	at surface (actually, implementation: at lowest atm pressure level).

	* doc/uguide/absorption.tex: Grammar fix.

2015-02-26  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-2-43

	* src/methods.cc:

	Turn on normalize by default for doit_i_fieldUpdateSeq1D with a
	threshold of 1.0.

	* controlfiles/general/agendasDOIT.arts:

	Remove explicit normalize and threshold arguments to
	doit_i_fieldUpdateSeq1D as they are now the defaults anyway.

2015-02-19  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-2-42
