@@ -1,42 +1,42 @@
 <?xml version="1.0"?>
 <arts format="ascii" version="1">
 <Vector nelem="300">
-14.5287786718871
-68.5872141584066
-45.5940726566718
-64.2696366864159
-219.643530873736
-291.086951065879
-261.413606628922
-150.897237755897
-108.633345300326
-94.5683223591442
-104.369185289998
-277.894332624936
-111.695199003405
-118.89348021864
-147.258881881087
-202.744239148937
-278.803194072717
+14.5294723940527
+68.5879188818958
+45.5953891382836
+64.2729198625914
+219.65015402763
+291.086951065381
+261.418073043095
+150.903888371306
+108.638401710103
+94.5723839613656
+104.373101131556
+277.894688061189
+111.698138790986
+118.895593666108
+147.260426969981
+202.745105169673
+278.80330480672
 291.086967069357
-291.08508400938
-277.636250259639
-241.562460601531
-219.955925145118
-214.663472398143
-218.398345105813
-231.928521097845
-236.009090939813
-248.1939324437
-260.862933030931
-273.03851559231
-283.719853640701
-290.329555131911
+291.085084022315
+277.636355343216
+241.562837787058
+219.956450989695
+214.664025470889
+218.398836394189
+231.928919100906
+236.009455161001
+248.194209001802
+260.863123110138
+273.038626438309
+283.719898188991
+290.329559461105
 291.087001360684
 291.087004549878
-291.074375619543
-291.083988309701
-291.087013240458
+291.074375684697
+291.08398832505
+291.087013240465
 291.087018273889
 291.087021948651
 291.087025721381
