@@ -1,42 +1,42 @@
 <?xml version="1.0"?>
 <arts format="ascii" version="1">
 <Vector nelem="300">
-33.4666987474423
-94.6437220842542
-59.6695259998214
-77.370670547393
-258.25000139664
-291.086951762818
-268.195477128646
-274.769377132313
-181.078982451017
-122.012771926175
-137.215076487193
-288.986930695119
-178.600958569624
-273.84264353353
-248.389253745234
-227.16036108719
-280.344607537204
+33.467344430056
+94.6443435103462
+59.6707665195313
+77.3737628955844
+258.252993949174
+291.086951762501
+268.198908712697
+274.770119100836
+181.082018645253
+122.016262652405
+137.218299014502
+288.986972035218
+178.602795816121
+273.842849913079
+248.389707696489
+227.160986213565
+280.344704244159
 291.086967069076
-291.084564785761
-280.312298023927
-278.570976727674
-283.475883291214
-290.128771332207
-291.077596012346
-289.347469510259
-290.55216091512
-290.493108012383
-282.846140287238
-282.827284653169
-289.216766461375
-291.086987880014
+291.084564802388
+280.312382038017
+278.571070625281
+283.47593840526
+290.128777912377
+291.077596062197
+289.347480776666
+290.552164268538
+290.493111637291
+282.846191531207
+282.827335042267
+289.21677761216
+291.086987880051
 291.087001369393
 291.087004553464
-291.085820135069
-291.084974354888
-291.087013223808
+291.085820140826
+291.084974365132
+291.087013223815
 291.087018273889
 291.087021948651
 291.087025721381
