@@ -340,7 +340,7 @@ frequency regions of interest. For atmospheric pressures $\gamma_L$ is
 much greater and because of that, of experimental
 significance in contrast to $\gamma$.\\
 Elaborating the model of Lorentz, van Vleck and Weisskopf made a
-correction to it \citep{vanvleck:45},particularly for the microwave
+correction to it \citep{vanvleck:45}, particularly for the microwave
 region:
 \begin{equation}\label{eq:abs_theory:vvw}
  F_{VVW} (\nu)=\left(\frac{\nu}{\nu_0}\right)^2\frac{\gamma_L}{\pi}
